--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "debug": "nodemon index.js",
-    "run": "node index.js"
+    "debug": "nodemon index.old.js",
+    "run": "node index.old.js"
   },
   "repository": {
     "type": "git",
@@ -19,8 +19,9 @@
   },
   "homepage": "https://github.com/dtolb/postman2swagger#readme",
   "dependencies": {
+    "api-spec-converter": "^2.12.0",
     "express": "^4.18.2",
-    "postman-to-swagger": "github:tecfu/postman-to-swagger"
+    "postman2openapi": "^1.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
